--- a/PowerRangeurWEB/Pages/TachePage.razor
+++ b/PowerRangeurWEB/Pages/TachePage.razor
@@ -10,6 +10,7 @@
         {
             <div class="bg-info">
                 @t.NomTache
+                <button> </button>
             </div>
         }
     </div>
