--- a/PowerRangeurWEB/Pages/TachePage.razor
+++ b/PowerRangeurWEB/Pages/TachePage.razor
@@ -3,6 +3,9 @@
 @using PowerRangeurAPI.Domain.Models
 
 <h3>Tache</h3>
+<button class="btn btn-info" type="button">
+    <NavLink href="CreationTache">Créer une Tâche</NavLink>
+</button>
 
 <div class="taches row gap-3">
     <div class="TachesLibres col-md col-12 card d-flex flex-column gap-2">
@@ -10,7 +13,6 @@
         {
             <div class="bg-info">
                 @t.NomTache
-                <button> </button>
             </div>
         }
     </div>
@@ -31,21 +33,3 @@
         }
     </div>
 </div>
-
-
-@code {
-    public IEnumerable<TacheGet> TachesLibres { get; set; } = [];
-    public IEnumerable<TacheGet> TachesEnCours { get; set; } = [];
-    public IEnumerable<TacheGet> TachesTerminees { get; set; } = [];
-
-    [Inject]
-    public HttpClient HttpClient { get; set; }
-
-    protected override async Task OnInitializedAsync()
-    {
-        List<TacheGet> taches = await HttpClient.GetFromJsonAsync<List<TacheGet>>("/api/tache/all");
-        TachesLibres = taches.Where(t => t.Statut == Tache.Status.Libre);
-        TachesEnCours = taches.Where(t => t.Statut == Tache.Status.Encours);
-        TachesTerminees = taches.Where(t => t.Statut == Tache.Status.Terminee);
-    }
-}
