--- a/PowerRangeurWEB/Pages/TachePage.razor
+++ b/PowerRangeurWEB/Pages/TachePage.razor
@@ -13,6 +13,9 @@
         {
             <div class="bg-info">
                 @t.NomTache
+                <button class="btn btn-info" type="button">
+                    <NavLink href="DetailTache">Détail</NavLink>
+                </button>
             </div>
         }
     </div>
@@ -21,6 +24,9 @@
         {
             <div class="bg-danger">
                 @t.NomTache
+                <button class="btn btn-info" type="button">
+                    <NavLink href="DetailTache">Détail</NavLink>
+                </button>
             </div>
         }
     </div>
@@ -29,6 +35,9 @@
         {
             <div class="bg-success">
                 @t.NomTache
+                <button class="btn btn-info" type="button">
+                    <NavLink href="DetailTache">Détail</NavLink>
+                </button>
             </div>
         }
     </div>
