--- a/PowerRangeurWEB/_Imports.razor
+++ b/PowerRangeurWEB/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using PowerRangeurWEB
 @using PowerRangeurWEB.Layout
+@using Microsoft.AspNetCore.Components.WebAssembly.Hosting;
+
