detailtache presque ok, corriger liste user

--- a/PowerRangeurWEB/Pages/DetailTache.razor
+++ b/PowerRangeurWEB/Pages/DetailTache.razor
@@ -1,7 +1,7 @@
-﻿@page "/DetailTache/{id:int?}"
+﻿@page "/DetailTache/{IdTache:int}" 
 
 <h3>DetailTache</h3>
-
+@IdTache
 @if (IdTache != null)
 {
     <ul>
