--- a/PowerRangeurWEB/_Imports.razor
+++ b/PowerRangeurWEB/_Imports.razor
@@ -9,4 +9,8 @@
 @using PowerRangeurWEB
 @using PowerRangeurWEB.Layout
 @using Microsoft.AspNetCore.Components.WebAssembly.Hosting;
+@using Microsoft.AspNetCore.Components;
+@using PowerRangeurAPI.API.DTOs.Tache;
+@using PowerRangeurAPI.Domain.Models;
+
 
