--- a/PowerRangeurWEB/Pages/DetailTache.razor
+++ b/PowerRangeurWEB/Pages/DetailTache.razor
@@ -1,22 +1,34 @@
-﻿@page "/DetailTache/{IdTache:int}" 
+﻿@page "/DetailTache/{IdTache:int}"
+@inject NavigationManager Navigation
 
-<h3>DetailTache</h3>
-@IdTache
-@if (IdTache != null)
-{
-    <ul>
-        <li>ID: @Tache.IdTache</li>
-        <li>Nom: @Tache.NomTache</li>
-        <li>Statut: @Tache.Statut</li>
-        <li>Priorité: @Tache.PrioriteTaches</li>
-        <li>Récurrence: @Tache.Recurrence</li>
-        <li>Description: @Tache.Description</li>
-        <li>Date de Création: @Tache.DateCreation</li>
-        <li>Date d'Échéance: @Tache.DateEcheance</li>
-        <li>Utilisateurs assignés: @Tache.Users</li>
-    </ul>
-}
-else
-{
-    <p>La tâche correspondante n'a pas été trouvée.</p>
+<h3>Detail Tache</h3>
+@{
+    if (IdTache != null)
+    {
+        <ul>
+            <li>ID: @Tache.IdTache</li>
+            <li>Nom: @Tache.NomTache</li>
+            <li>Statut: @Tache.Statut</li>
+            <li>Priorité: @Tache.PrioriteTaches</li>
+            <li>Récurrence: @Tache.Recurrence</li>
+            <li>Description: @Tache.Description</li>
+            <li>Date de Création: @Tache.DateCreation</li>
+            <li>Date d'Échéance: @Tache.DateEcheance</li>
+
+            @if (Tache.Users != null && Tache.Users.Any())
+            {
+                <li>Utilisateurs assignés: @string.Join(", ", Tache.Users.Select(user => user.Nom))</li>
+            }
+            else
+            {
+                <li>Aucun utilisateur n'est assigné</li>
+                <button @onclick="@(() => Navigation.NavigateTo($"/AssignerRangeur/{Tache.IdTache}"))">Trouver un Rangeur</button>
+
+            }
+        </ul>
+    }
+    else
+    {
+        <p>La tâche correspondante n'a pas été trouvée.</p>
+    }
 }
