--- a/PowerRangeurWEB/Pages/TachePage.razor
+++ b/PowerRangeurWEB/Pages/TachePage.razor
@@ -2,6 +2,7 @@
 @using Microsoft.EntityFrameworkCore.Metadata.Internal
 @using PowerRangeurAPI.API.DTOs.Tache
 @using PowerRangeurAPI.Domain.Models
+@using PowerRangeurWEB.Dialogs
 
 @inject NavigationManager Navigation
 
@@ -26,9 +27,8 @@
         {
             <div class="bg-danger">
                 @t.NomTache
-                <button class="btn btn-info" type="button">
-                    <NavLink href="DetailTache">Détail</NavLink>
-                </button>
+                <button class="btn btn-info" type="button" @onclick="@(() => Navigation.NavigateTo($"/DetailTache/{t.IdTache}"))">Détail</button>
+                <button @onclick="() => Assign(t)">Assigner</button>
             </div>
         }
     </div>
@@ -37,9 +37,8 @@
         {
             <div class="bg-success">
                 @t.NomTache
-                <button class="btn btn-info" type="button">
-                    <NavLink href="DetailTache">Détail</NavLink>
-                </button>
+                <button class="btn btn-info" type="button" @onclick="@(() => Navigation.NavigateTo($"/DetailTache/{t.IdTache}"))">Détail</button>
+
             </div>
         }
     </div>
