--- a/PowerRangeurWEB/_Imports.razor
+++ b/PowerRangeurWEB/_Imports.razor
@@ -12,5 +12,7 @@
 @using Microsoft.AspNetCore.Components;
 @using PowerRangeurAPI.API.DTOs.Tache;
 @using PowerRangeurAPI.Domain.Models;
+@using Blazored.Modal
+@using Blazored.Modal.Services
 
 
