--- a/PowerRangeurWEB/Pages/TachePage.razor
+++ b/PowerRangeurWEB/Pages/TachePage.razor
@@ -6,9 +6,15 @@
 
 @inject NavigationManager Navigation
 
+@* <MessageBox>
+    <TitleContent>la page des taches</TitleContent>
+    <ChildContent>
+    <p style=" color:brown">Il y a du boulot! </p>
+    </ChildContent>
+</MessageBox> *@
 
 <h3>Tache</h3>
-<button class="btn btn-info" type="button">
+<button class="btn btn-info">
     <NavLink href="CreationTache">Créer une Tâche</NavLink>
 </button>
 
