--- a/PowerRangeurWEB/_Imports.razor
+++ b/PowerRangeurWEB/_Imports.razor
@@ -14,5 +14,9 @@
 @using PowerRangeurAPI.Domain.Models;
 @using Blazored.Modal
 @using Blazored.Modal.Services
+@using FluentValidation
+@using PowerRangeurAPI.API.DTOs.User
+@using PowerRangeurWEB.Dialogs
+
 
 
