--- a/PowerRangeurWEB/Pages/CreationTache.razor
+++ b/PowerRangeurWEB/Pages/CreationTache.razor
@@ -1,27 +1,30 @@
 ﻿@page "/CreationTache"
 
 <h3>Creation Tache</h3>
-<EditForm FormName="creaTache" @* @onsubmit="()=> CreerTache()" *@ OnInvalidSubmit="CreerTache" Model="Tache" >
+<EditForm FormName="CreaTache" Model="@Tache" OnValidSubmit="@CreerTache">
+    <Blazored.FluentValidation.FluentValidationValidator DisableAssemblyScanning="true"/>
+    @* <DataAnnotationsValidator/> *@
+@*     <ValidationSummary/> *@
     <div>
         <label for="NomTache">Nom de la Tâche:</label>
-        <InputText @bind-Value="Tache.NomTache" type="text" required></InputText>
+        <InputText id="NomTache" @bind-Value="Tache.NomTache" required/>
+        <ValidationMessage For="() => Tache.NomTache"/>
     </div>
     <div>
-        <label for="Statut">Statut:</label>
-        <InputSelect @bind-Value="Tache.Statut" name="Statut">
-            <option value="">Fais Ton choix</option>
-            <option value=0>En cours</option>
-            <option value=1>Terminée</option>
-            <option value=2>En attente</option>
-        </InputSelect>
+@*         <label for="Statut">Statut:</label>
+        <InputSelect id="Statut" @bind-Value="Tache.Statut" required>
+            <option value="0">En cours</option>
+            <option value="1">Terminée</option>
+            <option value="2">En attente</option>
+        </InputSelect> *@
     </div>
     <div>
         <label for="PrioriteTaches">Priorité:</label>
-        <InputNumber @bind-Value="Tache.PrioriteTaches" required></InputNumber>
+        <InputNumber id="PrioriteTaches" @bind-Value="Tache.PrioriteTaches" required />
     </div>
     <div>
         <label for="Recurrence">Récurrence:</label>
-        <InputSelect @bind-Value="Tache.Recurrence">
+        <InputSelect id="Recurrence" @bind-Value="Tache.Recurrence">
             <option value="Non">Non</option>
             <option value="Quotidienne">Quotidienne</option>
             <option value="Hebdomadaire">Hebdomadaire</option>
@@ -30,15 +33,19 @@
     </div>
     <div>
         <label for="Description">Description:</label>
-        <InputTextArea @bind-Value="Tache.Description"></InputTextArea>
+        <InputTextArea id="Description" @bind-Value="Tache.Description" rows="6"/>
     </div>
     <div>
         <label for="DateEcheance">Date d'échéance:</label>
-        <InputDate @bind-Value="Tache.DateEcheance" required></InputDate>
+        <InputDate id="DateEcheance" @bind-Value="Tache.DateEcheance" required />
     </div>
-@*     <div>
-        <label for="PointBonusMalus">Point Bonus/Malus:</label>
-        <InputNumber @bind-Value="Tache.PointBonusMalus"></InputNumber>
+@*         <div>
+    Photo : <InputFile accept="image/*" OnChange="OnFileChosen" />
+
+    @if (!string.IsNullOrEmpty(_imageBase64))
+    {
+        <img width="100" src="data:image/png;base64,@_imageBase64" />
+    }
     </div> *@
     <button type="submit">Soumettre</button>
 </EditForm>
