--- a/PowerRangeurWEB/Layout/NavMenu.razor
+++ b/PowerRangeurWEB/Layout/NavMenu.razor
@@ -10,7 +10,7 @@
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="tableaudeBord" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Tableau De Bord
             </NavLink>
         </div>
