--- a/PowerRangeurWEB/Dialogs/RapportDialog.razor
+++ b/PowerRangeurWEB/Dialogs/RapportDialog.razor
@@ -27,7 +27,7 @@
 @if (User != null)
 {
     <div>
-        <p>Id: @User.IdUser</p>
+        <p>Id: @User.IdUser</p> @* => pq l'id reste à 0?!?' *@
         <p>Pseudo: @User.PseudoUser</p>
         <p>Score: @User.Score</p>
         <h4>Tâches Complètes:</h4>
